Fix run script